# shushu

./: .flake8  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-review/scripts/: pr-status.sh
.claude/skills/run-tests/: SKILL.md
.claude/skills/run-tests/scripts/: test.sh
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/workflows/: Dockerfile.integration  publish.yml  security-checks.yml  tests.yml
docs/: rubric-mapping.md  testing.md  threat-model.md
docs/superpowers/plans/: 2026-04-24-shushu-secrets-cli-v1.md
docs/superpowers/specs/: 2026-04-24-shushu-secrets-cli-design.md
src/shushu/: __init__.py  admin.py  alerts.py  fs.py  generate.py  privilege.py  store.py  users.py
src/shushu/cli/: __init__.py  _errors.py  _output.py  _translate.py
src/shushu/cli/_commands/: __init__.py  _write_helper.py  delete.py  doctor.py  env.py  explain.py  generate.py  get.py  learn.py  list_.py  overview.py  run.py  set.py  show.py
tests/: conftest.py  test_cli.py  test_self_verify.py
tests/integration/: test_admin_handoff.py  test_all_users_enumeration.py
tests/unit/: test_alerts.py  test_cli_delete.py  test_cli_doctor.py  test_cli_env.py  test_cli_generate.py  test_cli_get.py  test_cli_globals.py  test_cli_list.py  test_cli_overview.py  test_cli_run.py  test_cli_set.py  test_cli_show.py  test_errors.py  test_fs.py  test_generate.py  test_privilege.py  test_store.py  test_users.py
