[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shushu"
version = "0.1.0"
description = "shushu CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Ori Nachum", email = "ori.nachum@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "isort>=5",
    "flake8>=7",
]

[project.scripts]
shushu = "shushu.cli:main"

[project.urls]
Homepage = "https://github.com/agentculture/shushu"

[tool.hatch.build.targets.wheel]
packages = ["src/shushu"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
