[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shushu"
version = "0.2.0"
description = "shushu CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Ori Nachum", email = "ori.nachum@gmail.com" }]
dependencies = []

[project.scripts]
shushu = "shushu.cli:main"

[project.urls]
Homepage = "https://github.com/agentculture/shushu"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "coverage>=7",
    "black>=24",
    "isort>=5",
    "flake8>=7",
    "flake8-bandit>=4",
    "flake8-bugbear>=23",
    "pylint>=3",
    "bandit>=1.7",
    "pre-commit>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shushu"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: integration tests that require real OS user management (setuid-fork, useradd/userdel). Gated by SHUSHU_DOCKER=1 and usually run in a disposable container.",
]
